# lin-analyzer

./: CMakeLists.txt  LLVMBuild.txt  README.md  lin-profile.cpp
cmake/: FindZLIB.cmake
include/: CMakeLists.txt
include/profile_h/: AnalysisProfilingPass.h  AssignBasicBlockIDPass.h  AssignLoadStoreIDPass.h  BaseDatapath.h  CMakeLists.txt  CodeInstrumentPass.h  DDDG.h  DynamicDatapath.h  ExtractLoopInfoPass.h  GetInstDistributionPass.h  GetLoopBoundPass.h  InstrumentForDDDGPass.h  LoopNumberPass.h  Passes.h  QueryBasicBlockIDPass.h  QueryLoadStoreIDPass.h  Registers.h  SlotTracker.h  TraceDataStructure.h  TraceFunctions.h  auxiliary.h  btree.h  btree_map.h  color_macros.h  fpga_resources.h  generic_func.h  lin-profile.h  opcode_func.h  power_delay.h  xilinx_node_latency.h
lib/: CMakeLists.txt  LLVMBuild.txt
lib/Build_DDDG/: BaseDatapath.cpp  CMakeLists.txt  DDDG.cpp  DynamicDatapath.cpp  LLVMBuild.txt  Registers.cpp  SlotTracker.cpp  TraceFunctions.cpp  file_func.cpp  fpga_resources.cpp  generic_func.cpp  opcode_func.cpp
lib/Profile/: AnalysisProfilingPass.cpp  AssignBasicBlockID.cpp  AssignLoadStoreID.cpp  CMakeLists.txt  CodeInstrumentPass.cpp  ExtractLoopInfoPass.cpp  GetInstDistributionPass.cpp  GetLoopBoundPass.cpp  InstrumentForDDDGPass.cpp  LLVMBuild.txt  LoopNumberPass.cpp  QueryBasicBlockID.cpp  QueryLoadStoreID.cpp  TraceDataStructure.cpp
testsuite/: CMakeLists.txt
testsuite/Ecobench/: CMakeLists.txt  run_hls.py
testsuite/Ecobench/atax/: CMakeLists.txt  abstract_kernel.c  abstract_kernel.h  atax.c  atax.h  atax_array_info  atax_configuration  common.h  main.c  script.tcl
testsuite/Ecobench/bicg/: CMakeLists.txt  abstract_kernel.c  abstract_kernel.h  bicg.c  bicg.h  bicg_array_info  bicg_configuration  common.h  script.tcl
testsuite/Ecobench/convolution2d/: CMakeLists.txt  abstract_kernel.c  abstract_kernel.h  common.h  convolution2d.c  convolution2d.h  convolution2d_array_info  convolution2d_configuration  script.tcl
testsuite/Ecobench/convolution3d/: CMakeLists.txt  README.txt  abstract_kernel.c  abstract_kernel.h  common.h  convolution3d.c  convolution3d.h  convolution3d_array_info  convolution3d_configuration  script.tcl
testsuite/Ecobench/gemm/: CMakeLists.txt  abstract_kernel.c  abstract_kernel.h  common.h  gemm.c  gemm.h  gemm_array_info  gemm_configuration  script.tcl
testsuite/Ecobench/gesummv/: CMakeLists.txt  abstract_kernel.c  abstract_kernel.h  common.h  gesummv.c  gesummv.h  gesummv_array_info  gesummv_configuration  script.tcl
testsuite/Ecobench/mm/: abstract_kernel.c  abstract_kernel.h  common.h  mm.c  mm.h
testsuite/Ecobench/mvt/: CMakeLists.txt  abstract_kernel.c  abstract_kernel.h  common.h  mvt.c  mvt.h  mvt_array_info  mvt_configuration  script.tcl
testsuite/Ecobench/scripts/: parse_lin_for_prediction.py  run_analyzer.py  run_dse.py
testsuite/Ecobench/syr2k/: CMakeLists.txt  abstract_kernel.c  abstract_kernel.h  common.h  script.tcl  smallinput.data  syr2k.c  syr2k.h  syr2k_configuration
testsuite/Ecobench/syrk/: CMakeLists.txt  README.txt  abstract_kernel.c  abstract_kernel.h  common.h  script.tcl  syrk.c  syrk.h  syrk_array_info  syrk_configuration
testsuite/cmake/: FindLinProfiler.cmake
